compiler-core/src/parse/snapshots/gleam_core__parse__tests__function_invalid_signature.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\nfn f(a, \"b\") -> String {\n    a <> b\n}\n"
---
----- SOURCE CODE

fn f(a, "b") -> String {
    a <> b
}


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:2:9
  │
2 │ fn f(a, "b") -> String {
  │         ^^^ I was not expecting this

Found a String, expected one of: 
- `)`
- a function parameter
